--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,24 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#8221cb",
-    "activityBar.activeBorder": "#c07b1f",
-    "activityBar.background": "#8221cb",
-    "activityBar.foreground": "#e7e7e7",
-    "activityBar.inactiveForeground": "#e7e7e799",
-    "activityBarBadge.background": "#c07b1f",
+    "activityBar.activeBackground": "#e5e0ff",
+    "activityBar.activeBorder": "#ff7960",
+    "activityBar.background": "#e5e0ff",
+    "activityBar.foreground": "#000000",
+    "activityBar.inactiveForeground": "#00000099",
+    "activityBarBadge.background": "#ff7960",
     "activityBarBadge.foreground": "#000000",
-    "sash.hoverBorder": "#8221cb",
-    "sideBar.border": "#8221cb",
-    "statusBar.background": "#661a9f",
-    "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#8221cb",
-    "statusBarItem.remoteBackground": "#661a9f",
-    "statusBarItem.remoteForeground": "#e7e7e7",
-    "tab.activeBorder": "#8221cb",
-    "titleBar.activeBackground": "#661a9f",
-    "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#661a9f99",
-    "titleBar.inactiveForeground": "#e7e7e799"
+    "sash.hoverBorder": "#e5e0ff",
+    "sideBar.border": "#e5e0ff",
+    "statusBar.background": "#bbadff",
+    "statusBar.foreground": "#000000",
+    "statusBarItem.hoverBackground": "#917aff",
+    "statusBarItem.remoteBackground": "#bbadff",
+    "statusBarItem.remoteForeground": "#000000",
+    "tab.activeBorder": "#e5e0ff",
+    "titleBar.activeBackground": "#bbadff",
+    "titleBar.activeForeground": "#000000",
+    "titleBar.inactiveBackground": "#bbadff99",
+    "titleBar.inactiveForeground": "#00000099"
   },
-  "peacock.color": "#661a9f"
+  "peacock.color": "#bbadff"
 }
